hooked stuff into platforms module

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,7 @@ find_package(SDL2 REQUIRED)
 add_executable(gs2 gs2.cpp bus.cpp clock.cpp debug.cpp cpu.cpp memory.cpp opcodes.cpp test.cpp 
     display/text_40x24.cpp display/lores_40x48.cpp display/hgr_280x192.cpp display/display.cpp
     devices/keyboard.cpp devices/speaker.cpp devices/loader.cpp devices/thunderclockplus.cpp
+    platforms.cpp
     event_poll.cpp)
 
 # Include SDL2 headers
