minor updates for SDL3

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,7 +56,8 @@
         "queue": "cpp",
         "stack": "cpp",
         "unordered_map": "cpp",
-        "vector": "cpp"
+        "vector": "cpp",
+        "fstream": "cpp"
     },
     "makefile.configureOnOpen": false
 }
