--- a/.gitignore
+++ b/.gitignore
@@ -12,14 +12,19 @@ tmp/*
 roms/*/*.rom
 roms/*/*.bin
 roms/*/base.addr
+roms/cards/*/*.rom
 bin
 bin/*
 lib/
 lib/*
+apps/*/Makefile
 disk_images/*
 **/*_Output.txt
 **/_FileInformation.txt
 GSSquared.app/
 assets/img
+assets/*
+resources/*
 /Makefile
 !src/devices/prodos_block/Makefile
+packages/*
