update ignores; remove unwanted file from repo

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,10 @@ hw.dSYM/
 gs2
 testdev/
 CMakeCache.txt
+**/cmake_install.cmake
 cmake_install.cmake
+compile_commands.json
+**/.venv
 tmp/
 tmp/*
 roms/*/*.rom
